test: Java 17 用のプロファイルを追加